add listener for changes in parameter